--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
-    <header>
-        <h1>Anything</h1>
+
+<body class="work-sans-normal">
+    <header class="head">
+        <nav class="navi">
+            <h3 class="nav-title">Ma<span class="title-primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-hi">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn">Download CV</button>
+                <button class="btn">Contact</button>
+            </div>
+            <img class="image" width="" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
@@ -16,4 +41,5 @@
 
     </footer>
 </body>
+
 </html>
