--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <div class="banner-content">
                 <h3 class="banner-hi">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.</p>
                 <button class="btn">Download CV</button>
                 <button class="btn">Contact</button>
             </div>
@@ -37,57 +38,152 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-para">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-para">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-items">
                 <div class="about-item">
                     <p class="name">Name:</p>
-                    <p class="mary">Mary Hardy</p>  
+                    <p class="mary">Mary Hardy</p>
                 </div>
                 <div class="about-item">
                     <p class="name">Email:</p>
-                    <p class="mary">info@gmail.com</p>  
+                    <p class="mary">info@gmail.com</p>
                 </div>
                 <div class="about-item">
                     <p class="name">Date Of Birth:</p>
-                    <p class="mary">19 February, 2005</p>  
+                    <p class="mary">19 February, 2005</p>
                 </div>
                 <div class="about-item">
                     <p class="name">From:</p>
-                    <p class="mary">Cumilla, Bangladesh</p>  
+                    <p class="mary">Cumilla, Bangladesh</p>
                 </div>
             </div>
         </section>
         <section class="skills ">
             <div>
                 <h3 class="skills-heading text-center">What I do</h3>
-                <p class="skills-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                <p class="skills-description text-center">I have more than 10 years experience building software for
+                    clients all over the world. Below is a quick overview of my main technical skill sets and
+                    technologies i use. Want to find out more about my experience? Check out my online resume and
+                    project portfolio.</p>
             </div>
             <div class="skills-container">
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <h4 class="skill-title">Vanilla JavaScript</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <h4 class="skill-title">React</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <h4 class="skill-title">Node.js</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <h4 class="skill-title">MongoDB</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
+        <section class="resume">
+            <h3 class="section-title-2">A Summery Of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                        <div class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                        <div class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                        <div class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                        <div class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-subtitle"></h5>
+                        <div class="resume-description"></div>
+                    </div>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                        <div class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-subtitle">Harvard University / 2015 - 2017</h5>
+                        <div class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+            <div class="text-center dwn-cv"><button class="btn">Download CV</button></div>
 
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer-column">
+            <h3 class="footer-title">Lets Connect</h3>
+            <p class="footer-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="figure">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your name">
+                <input type="email" name="" id="" placeholder="Your email">
+                <textarea name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
+                <input class="btn" type="submit" value="Submit" >
+            </form>
+
+        </div>
     </footer>
 </body>
 
